# image-search-lance

./: .dockerignore  .gitignore  Dockerfile.cpu  Dockerfile.gpu  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2025-09-28_create_a_search_table.py  2025-09-28_set_default_value_of_created_at.py  2025-09-28_update_created_at_column_with_time_zone.py
app/: config.py  database.py  lancedb_utils.py  main.py  models.py
clip_service/: main.py
